name:                stanford-compilers
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/stanford-compilers#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                   , src/Lexer/Lexer.x
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.String.Strip
                     , Lexer.Lexer
                     , Lexer.Token
                     , Lexer.TokenUtil
                     , Lexer.LexerUtil
                     , Parser.AST
                     , Parser.TerminalNode
                     , Parser.Parser
                     , Parser.ParserUtil
                     , SemanticAnalyzer.ClassChecker

  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , lens
                     , mtl
                     , containers
                     , array
                     , monad-loops
  default-language:    Haskell2010

executable stanford-compilers
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , stanford-compilers
  default-language:    Haskell2010
  build-tools:         alex
                     , happy

test-suite stanford-compilers-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , stanford-compilers
                     , parsec
                     , hspec
                     , HUnit
                     , QuickCheck
                     , containers
                     , array
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/stanford-compilers
